Fix Encoding (hopefully)

--- a/app/components/ember-cite/template.hbs
+++ b/app/components/ember-cite/template.hbs
@@ -1,4 +1,8 @@
+<head>
+  <meta charset="iso-8859-1">
+</head>
 {{yield}}
+
 <div class="container">
   <div class="row">
     <div class="col-sm-6" id="csl-outer-block">
@@ -17,14 +21,14 @@
                     "container-title": "Educational Philosophy and Theory",
                     "page": "57-73",
                     "volume": "44",
-                    "abstract": "This article argues against the doxa that Foucault's analysis of education inevitably undermines self-originating ethical intention on the part of teachers or students. By attending to Foucault's lesser known, later workâ€”in particular, the notion of â€˜biopowerâ€™ and the deepened level of materiality it entailsâ€”the article shows how the earlier Foucauldian conception of power is intensified to such an extent that it overflows its original domain, and comes to â€˜infuseâ€™ the subject that might previously have been taken as a mere effect. What emerges, accordingly, is a subject divested of â€˜traditionalâ€™, substantial, formation, located wholly on an immanent plane, and yet centrally concerned with the practice of freedom and ethical resistance. In turn, what seemed to have no place at all in the earlier Foucault becomes central: in general, active subjectivization (subjectivation) as a counter to passive subjection (assujetissement); more particularly, subjects' ongoing production and creation (via strategic decisions and localized opposition) of a new ethos, new â€˜practices of selfâ€™, and new kinds of relations. With this alternative Foucauldian position outlined, the article then focuses more particularly on the practices of education: it concludes that, instead of being rendered merely the factories of obedient behaviour, schools or colleges can be the locus for a critically-informed, oppositional micro-politics. In other words: the power-relations that (quite literally) constitute education can now be regarded, on Foucault's own terms, as being creative, â€˜enablingâ€™ and positive.",
+                    "abstract": "This article argues against the doxa that Foucault's analysis of education inevitably undermines self-originating ethical intention on the part of teachers or students. By attending to Foucault's lesser known, later work—in particular, the notion of ‘biopower’ and the deepened level of materiality it entails—the article shows how the earlier Foucauldian conception of power is intensified to such an extent that it overflows its original domain, and comes to ‘infuse’ the subject that might previously have been taken as a mere effect. What emerges, accordingly, is a subject divested of ‘traditional’, substantial, formation, located wholly on an immanent plane, and yet centrally concerned with the practice of freedom and ethical resistance. In turn, what seemed to have no place at all in the earlier Foucault becomes central: in general, active subjectivization (subjectivation) as a counter to passive subjection (assujetissement); more particularly, subjects' ongoing production and creation (via strategic decisions and localized opposition) of a new ethos, new ‘practices of self’, and new kinds of relations. With this alternative Foucauldian position outlined, the article then focuses more particularly on the practices of education: it concludes that, instead of being rendered merely the factories of obedient behaviour, schools or colleges can be the locus for a critically-informed, oppositional micro-politics. In other words: the power-relations that (quite literally) constitute education can now be regarded, on Foucault's own terms, as being creative, ‘enabling’ and positive.",
                     "URL": "http://onlinelibrary.wiley.com.pitt.idm.oclc.org/doi/10.1111/j.1469-5812.2011.00774.x/abstract",
                     "DOI": "10.1111/j.1469-5812.2011.00774.x",
                     "shortTitle": "Beyond Subjection",
                     "language": "en",
                     "author": [
                         {
-                            "family": "Leaskz",
+                            "family": "Leask",
                             "given": "Ian"
                         }
                     ],
@@ -33,6 +37,23 @@
                     },
                     "accessed": {
                         "raw": "2017-06-03"
+                    }
+                },
+                {
+                    "id": "2656243/GMJHCJ9Q",
+                    "type": "article-journal",
+                    "title": "Scottsboro: a tragedy of the American South",
+                    "container-title": "acls humanities e-book, acls humanities e-book",
+                    "URL": "http://quod.lib.umich.edu/cgi/t/text/pageviewer-idx?cc=acls;c=acls;idno=heb00715.0001.001;node=heb00715.0001.001%3A4;rgn=div1;view=image;page=root;seq=23",
+                    "shortTitle": "Scottsboro",
+                    "author": [
+                        {
+                            "family": "Carter",
+                            "given": "Dan T."
+                        }
+                    ],
+                    "accessed": {
+                        "raw": "2017-04-27"
                     }
                 },
                 {
@@ -64,24 +85,24 @@
                 {
                     "id": "2656243/RABRD6UI",
                     "type": "article-journal",
-                    "title": "Analyzing the novel â€œto kill a Mockingbirdâ€ in literature class",
+                    "title": "Analyzing the novel “to kill a Mockingbird” in literature class",
                     "container-title": "Procedia - Social and Behavioral Sciences",
                     "collection-title": "Innovation and Creativity in Education",
                     "page": "4387-4391",
                     "volume": "2",
                     "issue": "2",
-                    "abstract": "The purpose of the study is to find out most effective activities that could be applied in â€œPerspectives in Literature Classâ€ while the novel which is one of the most fundamental example of American Literature â€“ â€œâ€œTo Kill a Mockingbirdâ€ by Harper Lee - is analyzed in terms of various narration techniques including characterization, theme, plot, exposition, point of view, motifs and symbols. In this context, whether the activities including drawing a triangular comparison diagram, Venn diagram, clustering, brainstorming, games, watching documentary and videos, writing journals, drawing plotline, technology integrated games and competitions etc. have positive affects on the studentsâ€™ comprehending the literary devices included in the novel is sought. In order to examine the effects of the activities on pupils learning, a curriculum project was developed so as to teach a unit in literature class via designing a concept map, curriculum project plan (description of the unit, outcome statements, the structure of activities), lesson plans and samples of studentsâ€™ works, overall evaluation plan (worksheets, quizzes, journals), description of the technology integrated and bibliography. The participants in this study were twenty-four eleventh grade high school students enrolled in Ames High School in Iowa, the USA in the second semester of 2007-2008 academic years. The data were collected through observations, interviews and samples of studentsâ€™ works. The results of the study indicated that the success and the comprehension of the pupilsâ€™ literary devices included in the novel could be developed by means of these selected classroom activities.",
+                    "abstract": "The purpose of the study is to find out most effective activities that could be applied in “Perspectives in Literature Class” while the novel which is one of the most fundamental example of American Literature – ““To Kill a Mockingbird” by Harper Lee - is analyzed in terms of various narration techniques including characterization, theme, plot, exposition, point of view, motifs and symbols. In this context, whether the activities including drawing a triangular comparison diagram, Venn diagram, clustering, brainstorming, games, watching documentary and videos, writing journals, drawing plotline, technology integrated games and competitions etc. have positive affects on the students’ comprehending the literary devices included in the novel is sought. In order to examine the effects of the activities on pupils learning, a curriculum project was developed so as to teach a unit in literature class via designing a concept map, curriculum project plan (description of the unit, outcome statements, the structure of activities), lesson plans and samples of students’ works, overall evaluation plan (worksheets, quizzes, journals), description of the technology integrated and bibliography. The participants in this study were twenty-four eleventh grade high school students enrolled in Ames High School in Iowa, the USA in the second semester of 2007-2008 academic years. The data were collected through observations, interviews and samples of students’ works. The results of the study indicated that the success and the comprehension of the pupils’ literary devices included in the novel could be developed by means of these selected classroom activities.",
                     "URL": "http://www.sciencedirect.com/science/article/pii/S187704281000738X",
                     "DOI": "10.1016/j.sbspro.2010.03.698",
                     "journalAbbreviation": "Procedia - Social and Behavioral Sciences",
                     "author": [
                         {
-                            "family": "TanÄ±ÅŸ",
+                            "family": "Tanış",
                             "given": "Ayfer"
                         },
                         {
                             "family": "Cengizhan",
-                            "given": "LÃ¼tfiye"
+                            "given": "Lütfiye"
                         }
                     ],
                     "issued": {
@@ -90,6 +111,87 @@
                     "accessed": {
                         "raw": "2017-04-27"
                     }
+                },
+                {
+                    "id": "2656243/WP95HAC5",
+                    "type": "article-journal",
+                    "title": "Analyzing the novel “to kill a Mockingbird” in literature class",
+                    "container-title": "Procedia - Social and Behavioral Sciences",
+                    "collection-title": "Innovation and Creativity in Education",
+                    "page": "4387-4391",
+                    "volume": "2",
+                    "issue": "2",
+                    "abstract": "The purpose of the study is to find out most effective activities that could be applied in “Perspectives in Literature Class” while the novel which is one of the most fundamental example of American Literature – ““To Kill a Mockingbird” by Harper Lee - is analyzed in terms of various narration techniques including characterization, theme, plot, exposition, point of view, motifs and symbols. In this context, whether the activities including drawing a triangular comparison diagram, Venn diagram, clustering, brainstorming, games, watching documentary and videos, writing journals, drawing plotline, technology integrated games and competitions etc. have positive affects on the students’ comprehending the literary devices included in the novel is sought. In order to examine the effects of the activities on pupils learning, a curriculum project was developed so as to teach a unit in literature class via designing a concept map, curriculum project plan (description of the unit, outcome statements, the structure of activities), lesson plans and samples of students’ works, overall evaluation plan (worksheets, quizzes, journals), description of the technology integrated and bibliography. The participants in this study were twenty-four eleventh grade high school students enrolled in Ames High School in Iowa, the USA in the second semester of 2007-2008 academic years. The data were collected through observations, interviews and samples of students’ works. The results of the study indicated that the success and the comprehension of the pupils’ literary devices included in the novel could be developed by means of these selected classroom activities.",
+                    "URL": "http://www.sciencedirect.com/science/article/pii/S187704281000738X",
+                    "DOI": "10.1016/j.sbspro.2010.03.698",
+                    "journalAbbreviation": "Procedia - Social and Behavioral Sciences",
+                    "author": [
+                        {
+                            "family": "Tanış",
+                            "given": "Ayfer"
+                        },
+                        {
+                            "family": "Cengizhan",
+                            "given": "Lütfiye"
+                        }
+                    ],
+                    "issued": {
+                        "raw": "January 1, 2010"
+                    },
+                    "accessed": {
+                        "raw": "2017-04-27"
+                    }
+                },
+                {
+                    "id": "2656243/35MKCTQK",
+                    "type": "article-journal",
+                    "title": "Drawing Borges: A Two-Part Invention on the Labyrinths of Jorge Luis Borges and M. C. Escher",
+                    "container-title": "Rocky Mountain Review of Language and Literature",
+                    "page": "11-23",
+                    "volume": "55",
+                    "issue": "2",
+                    "abstract": "Many parallels may be observed between the literary art of Jorge Luis Borges and the visual art of M. C. Escher. The fantastic worlds found in Escher's art provide visual analogies to the fantastic worlds chronicled by Borges in many ways. Four stories (ficciones) by Borges are discussed here--\"The Circular Ruins,\" \"The Secret Miracle,\" \"The Library of Babel,\" and \"Tlön, Uqbar, Orbis Tertius\"--in contrapuntal harmony with selected Escher prints.",
+                    "URL": "http://www.jstor.org.pitt.idm.oclc.org/stable/1348254",
+                    "DOI": "10.2307/1348254",
+                    "shortTitle": "Drawing Borges",
+                    "author": [
+                        {
+                            "family": "Parker",
+                            "given": "Allene M."
+                        }
+                    ],
+                    "issued": {
+                        "raw": "2001"
+                    },
+                    "accessed": {
+                        "raw": "2017-03-06"
+                    }
+                },
+                {
+                    "id": "2656243/C2AB57WU",
+                    "type": "article-journal",
+                    "title": "Multiculturalism in America, Australia and India",
+                    "container-title": "Social Change",
+                    "page": "99-110",
+                    "volume": "43",
+                    "issue": "1",
+                    "abstract": "Originally associated with the Left as academic reform and curriculum change, multiculturalism subsequently came to be accepted as study of the philosophy, literature and art of cultures. It got the status of official policy at all levels in the US and other democratic countries. It has been successful in the three democracies, America, Australia and India. India, as the most ancient of the three multicultural societies, has several cultures merging over the centuries, new cultures evolving, and several others co-existing today. There is a Hindu majority despite foreign incursions, Hinduism being the most tolerant religion that does not resort to conversions. America and Australia have Christian majority. The multiple ethnic groups in America and Australia are allowed to practise their individual religions. The occasional ethnic conflicts notwithstanding, the three multicultural societies are advancing as modern nations, interacting with each other.",
+                    "URL": "http://dx.doi.org/10.1177/0049085713475729",
+                    "DOI": "10.1177/0049085713475729",
+                    "journalAbbreviation": "Social Change",
+                    "author": [
+                        {
+                            "family": "Ramakrishna",
+                            "given": "D."
+                        }
+                    ],
+                    "issued": {
+                        "raw": "March 1, 2013"
+                    },
+                    "accessed": {
+                        "raw": "2017-04-19"
+                    }
+                
                 }
             ]
         }
