--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,4 +1,9 @@
+<head>
+<meta charset="UTF-8">
+</head>
+<body>
 <div class="section" id="my-amazing-bibliography">
     <h2>My Amazing Bibliography</h2>
 </div>
+</body>
 {{outlet}}
