--- a/app/templates/biblio.hbs
+++ b/app/templates/biblio.hbs
@@ -1,6 +1,10 @@
-<link rel = "stylesheet" type = "text/css" href = "style.css" />
+<head>
+<meta charset="UTF-8">
+<link rel = "stylesheet" type = "text/css" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
+</head>
+<body>
 {{ ember-cite }}
+</body>
