--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,9 +1,13 @@
 <head>
 <meta charset="UTF-8">
+<link rel = "stylesheet" type = "text/css" />
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-<div class="section" id="my-amazing-bibliography">
-    <h2>My Amazing Bibliography</h2>
-</div>
+  <div class="section" id="my-amazing-bibliography">
+      <h3>My Amazing Bibliography</h3>
+  </div>
 </body>
 {{outlet}}
