Form updates bibliography

--- a/app/components/citation-display/template.hbs
+++ b/app/components/citation-display/template.hbs
@@ -11,7 +11,7 @@
       </div>
     </div>
   </div>
-  <!-- <button {{ action 'updatesCitations' }}>Update</button> -->
+  <button {{ action 'updatesCitations'}}>Update</button>
 </div>
 
 {{yield}}
