--- a/app/templates/cite-display.hbs
+++ b/app/templates/cite-display.hbs
@@ -1,19 +1,8 @@
-    {{ citation-display }}
+    {{ citation-display model=model }}
     <div class="container">
       <button class="btn btn-default" {{action "formShow"}}>Add Citation</button>
       <button class="btn btn-default" {{action "formHide"}}>Cancel</button>
       {{#if isClicked }}
-          {{ citation-form }}
+          {{ citation-form submitted=model submit="submit" store=store saveToModel="saveToModel"}}
       {{/if}}
     </div>
-
-<!-- <button {{action 'toggle'}}>Toggle</button>
-    {{#if expanded}}
-      <ol>
-        <li>item</li>
-        <li>item</li>
-        <li>item</li>
-        <li>item</li>
-        <li>item</li>
-      </ol>
-    {{/if}} -->
