Combine into one component - messy

--- a/app/components/citation-form/template.hbs
+++ b/app/components/citation-form/template.hbs
@@ -3,7 +3,7 @@
 </head>
 {{yield}}
 
-<div class="container">
+<!-- <div class="container">
   <div class="row">
     <div class="col-sm-6" id="csl-outer-block">
       <div id="csl-inner-block">
@@ -20,7 +20,7 @@
               <p>{{input value=attrs.submitted.shortTitle class="form-control" placeholder="Short Title"}}</p>
               <p>{{input value=attrs.submitted.family class="form-control" placeholder="Family Name"}}</p>
               <p>{{input value=attrs.submitted.given id='given-name' class="form-control" placeholder="Given Name"}}</p>
-              <p>{{input value=attrs.submitted.raw id='raw' class="form-control" placeholder="raw"}}</p>
+              <p>{{input value=attrs.submitted.raw id='raw' class="form-control" placeholder="raw"}}</p> -->
 
               <!-- <div class="row">
                 <div class="col-sm-5 form-group  elements">
@@ -78,7 +78,7 @@
               <div class="form-group elements">
                   {{input value=url id='url' class="form-control" placeholder="URL"}}
               </div> -->
-              <p><button class="btn" {{action 'submit' submitted }}>Submit</button></p>
+              <!-- <p><button class="btn" {{action 'submit' submitted }}>Submit</button></p> -->
               <!-- <div class="row">
                 <div class="col-sm-1"></div>
                 <button class="col-sm-10 btn btn-default" {{action "formExtend"}}>Advanced</button>
@@ -114,11 +114,9 @@
                   </div>
               </div>
               {{/if}} -->
-            </form>
+            <!-- </form>
         </div>
       </div>
     </div>
   </div>
-</div>
-
-{{yield}}
+</div> -->
