--- a/app/templates/cite-display.hbs
+++ b/app/templates/cite-display.hbs
@@ -1,8 +1,8 @@
-    {{ citation-display model=model }}
+    {{ citation-display model=model submitted=model submit="submit" store=store saveToModel="saveToModel"}}
     <div class="container">
       <button class="btn btn-default" {{action "formShow"}}>Add Citation</button>
       <button class="btn btn-default" {{action "formHide"}}>Cancel</button>
-      {{#if isClicked }}
+      <!-- {{#if isClicked }}
           {{ citation-form submitted=model submit="submit" store=store saveToModel="saveToModel"}}
-      {{/if}}
+      {{/if}} -->
     </div>
