--- a/app/components/citation-display/template.hbs
+++ b/app/components/citation-display/template.hbs
@@ -11,7 +11,122 @@
       </div>
     </div>
   </div>
-  <button {{ action 'updatesCitations'}}>Update</button>
+  <!-- <button {{ action 'updatesCitations'}}>Update</button> -->
+  <div class="row">
+    <div class="col-sm-6" id="csl-outer-block">
+      <div id="csl-inner-block">
+        <div class="csl-content-block" id="csl-content-block">
+            <form class="add-citation-form" id="myform" type="post">
+              <p>{{input value=attrs.submitted.id class="form-control" placeholder="ID"}}</p>
+              <p>{{input value=attrs.submitted.type class="form-control" placeholder="Type"}}</p>
+              <p>{{input value=attrs.submitted.title class="form-control" placeholder="Title"}}</p>
+              <p>{{input value=attrs.submitted.containerTitle class="form-control" placeholder="container title"}}</p>
+              <p>{{input value=attrs.submitted.page class="form-control" placeholder="Page"}}</p>
+              <p>{{input value=attrs.submitted.volume class="form-control" placeholder="Volume"}}</p>
+              <p>{{input value=attrs.submitted.issue class="form-control" placeholder="Issue"}}</p>
+              <p>{{input value=attrs.submitted.URL class="form-control" placeholder="URL"}}</p>
+              <p>{{input value=attrs.submitted.shortTitle class="form-control" placeholder="Short Title"}}</p>
+              <p>{{input value=attrs.submitted.family class="form-control" placeholder="Family Name"}}</p>
+              <p>{{input value=attrs.submitted.given id='given-name' class="form-control" placeholder="Given Name"}}</p>
+              <p>{{input value=attrs.submitted.raw id='raw' class="form-control" placeholder="raw"}}</p>
+
+              <!-- <div class="row">
+                <div class="col-sm-5 form-group  elements">
+                    {{input value=family-name id='family-name' class="form-control" placeholder="Family Name"}}
+                </div>
+                <div class="col-sm-2 form-group elements">
+                    {{input value=middle-initial id='middle-initial' class="form-control" placeholder="M.I."}}
+                </div>
+                <div class="col-sm-5 form-group elements">
+                    {{input value=given-name id='given-name' class="form-control" placeholder="Given Name"}}
+                </div>
+              </div> -->
+              <!-- <div class="form-group elements">
+                  {{input value=long-title id='long-title' class="form-control" placeholder="Title"}}
+              </div>
+              <div class="form-group elements">
+                  {{input value=container-title id='container-title' class="form-control" placeholder="Journal"}}
+              </div>
+              <div class="form-group elements">
+                  {{input value=collection-title id='collection-title' class="form-control" placeholder="Collection Title"}}
+              </div>
+              <div class="row">
+                  <div class="col-sm-4 form-group elements">
+                      {{input value=pages id='pages' class="form-control" placeholder="Pages"}}
+                  </div>
+                  <div class="col-sm-4 form-group elements">
+                      {{input value=volume id='volume' class="form-control" placeholder="Volume"}}
+                  </div>
+                  <div class="col-sm-4 form-group elements">
+                      {{input value=issue id='issue' class="form-control" placeholder="Issue"}}
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col-sm-6 form-group elements">
+                      {{input value=date-accessed id='date-accessed' class="form-control" placeholder="Date Accessed"}}
+                  </div>
+                  <div class="col-sm-6 form-group elements">
+                      {{input value=date-issued id='date-issued' class="form-control" placeholder="Date Issued"}}
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col-sm-6 form-group elements">
+                      {{input value=doi id='doi' class="form-control" placeholder="DOI"}}
+                  </div>
+                  <div class="col-sm-6 form-group elements">
+                      <select disabled={{disabled}} class="{{class}}" {{action 'change' on='change'}}>
+                        {{#each content as |item|}}
+                          <option value={{item}}>
+                            <p>{{item}}</p>
+                          </option>
+                        {{/each}}
+                      </select>
+                  </div>
+              </div>
+              <div class="form-group elements">
+                  {{input value=url id='url' class="form-control" placeholder="URL"}}
+              </div> -->
+              <p><button class="btn" {{action 'submit' submitted }} {{ action 'updatesCitations'}}>Submit</button></p>
+              <!-- <div class="row">
+                <div class="col-sm-1"></div>
+                <button class="col-sm-10 btn btn-default" {{action "formExtend"}}>Advanced</button>
+                <div class="col-sm-1"></div>
+              </div><br>
+              {{#if isOpened }}
+              <div class="row">
+                <div class="col-sm-3 form-group">
+                    {{input value=prefix id='prefix' class="form-control" placeholder="Prefix"}}
+                </div>
+                <div class="col-sm-3 form-group">
+                    {{input value=suffix id='suffix' class="form-control" placeholder="Suffix"}}
+                </div>
+                <div class="col-sm-6 form-group">
+                    {{input value=journal-abbr id='journal-abbr' class="form-control" placeholder="Journal Abbr."}}
+                </div>
+              </div>
+              <div class="form-group">
+                  {{input value=short-title id='short-title' class="form-control" placeholder="Short Title"}}
+              </div>
+              <div class="form-group">
+                  {{input value=editor id='editor' class="form-control" placeholder="Editor"}}
+              </div>
+              <div class="row">
+                  <div class="col-sm-4 form-group">
+                      {{input value=publisher id='publisher' class="form-control" placeholder="Publisher"}}
+                  </div>
+                  <div class="col-sm-4 form-group">
+                      {{input value=year id='year' class="form-control" placeholder="Year"}}
+                  </div>
+                  <div class="col-sm-4 form-group">
+                      {{input value=location id='location' class="form-control" placeholder="Location"}}
+                  </div>
+              </div>
+              {{/if}} -->
+            </form>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 {{yield}}
