--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -3,28 +3,33 @@
     background: #efefef;
     padding: 0.5em;
 }
-
 .citation {
     background: #dddddd;
 }
 #csl-outer-block {
-    max-width: 40em;
+    max-width: 50em;
     padding: 10px;
 }
 #csl-inner-block {
-    max-width: 40em;
+    max-width: 50em;
     bottom: 17em;
     left: 2em;
     padding: 10px;
 }
 #csl-content-block {
     background:white;
+    /*border: solid black 1px;*/
+    padding: 0.5em;
+}
+
+#csl-form-block {
+    background:white;
     border: solid black 1px;
     padding: 0.5em;
 }
 
 .json-data {
-    width: 40em;
+    width: 50em;
     height:500px;
     bottom: 17em;
     left: 2em;
@@ -66,36 +71,9 @@
     right: 0.3em;
     top: 0px;
 }
-#dynamic-editing, #my-amazing-bibliography {
+#my-amazing-bibliography {
     padding:1em;
     color: white ;
     background: #204762;
     margin-bottom: 1em;
-}
-#dynamic-editing p {
-    line-height: 2em;
-}
-.citeme {
-    display: inline;
-    cursor: pointer;
-    background: white;
-    border: 1px solid #aaaaaa;
-    border-radius: 2px;
-    margin: 0px 5px 0px 2px;
-    padding: 0px 2px 0px 2px;
-}
-#cite-menu {
-    position: absolute;
-    display: inline-block;
-}
-#cite-menu .menu {
-    position: relative;
-    top: 0px;
-    /* left: 0px; */
-    width: 135px;
-    background: white;
-    padding: 0.5em;
-    border: 1px solid black;
-    border-radius: 0.5em;
-    z-index: 100;
 }
